--- a/spring-boot-basic/src/main/resources/application.properties
+++ b/spring-boot-basic/src/main/resources/application.properties
@@ -3,13 +3,11 @@ logging.level.com.smart = DEBUG
 logging.level.org.springframework.web = DEBUG
 #logging.file = /var/netgloo_blog/logs/spring-boot-logging.log
 
-spring.mvc.view.prefix= /WEB-INF/jsp/
+
+
+spring.mvc.view.prefix= /WEB-INF/pages/
 spring.mvc.view.suffix= .jsp
-application.hello=Hello Angel From application
-
-#spring.view.prefix=/WEB-INF/jsp/
-#spring.view.suffix=.jsp
-
+application.message= Hello Phil
 
 #server.contextPath=/
 #server.port=8080
