--- a/spring-boot-basic/src/main/resources/application.properties
+++ b/spring-boot-basic/src/main/resources/application.properties
@@ -3,12 +3,10 @@ logging.level.com.smart = DEBUG
 logging.level.org.springframework.web = DEBUG
 #logging.file = /var/netgloo_blog/logs/spring-boot-logging.log
 
-
-
-spring.mvc.view.prefix= /WEB-INF/pages/
-spring.mvc.view.suffix= .jsp
 application.message= Hello Phil
 
+#devtools可以实现页面热部署，即页面修改后会立即生效
+spring.thymeleaf.cache=false
 #server.contextPath=/
 #server.port=8080
 
@@ -16,22 +14,22 @@ application.message= Hello Phil
 #spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 
 
-spring.datasource.name=sampleDs
-spring.datasource.url=jdbc:mysql://localhost:3306/ecut
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.name=sampleDs
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecut
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 # JNDI location of the datasource. Class, url, username & password are ignored when set.
 #spring.datasource.jndi-name=java:comp/env/jdbc/sampleDs
 
-spring.datasource.max-wait=10000
-spring.datasource.max-active=50
-spring.datasource.max-idle=10
-spring.datasource.min-idle=8
-spring.datasource.test-on-borrow=true
-spring.datasource.validation-query=select 1
+#spring.datasource.max-wait=10000
+#spring.datasource.max-active=50
+#spring.datasource.max-idle=10
+#spring.datasource.min-idle=8
+#spring.datasource.test-on-borrow=true
+#spring.datasource.validation-query=select 1
 
 #spring.datasource.initialize=true
 #spring.datasource.platform=mysql
