新增 @ImportResource({"classpath:applicationContext.xml"})加载xml配置文件

--- a/spring-boot-basic/src/main/resources/application.properties
+++ b/spring-boot-basic/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.com.smart = DEBUG
 logging.level.org.springframework.web = DEBUG
@@ -5,7 +7,7 @@ logging.level.org.springframework.web = DEBUG
 
 application.message= Hello Phil
 
-#devtools¿ÉÒÔÊµÏÖÒ³ÃæÈÈ²¿Êð£¬¼´Ò³ÃæÐÞ¸Äºó»áÁ¢¼´ÉúÐ§
+#devtoolsï¿½ï¿½ï¿½ï¿½Êµï¿½ï¿½Ò³ï¿½ï¿½ï¿½È²ï¿½ï¿½ð£¬¼ï¿½Ò³ï¿½ï¿½ï¿½Þ¸Äºï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð§
 spring.thymeleaf.cache=false
 #server.contextPath=/
 #server.port=8080
