--- a/spring-boot-sharding-sphere/src/main/resources/application.properties
+++ b/spring-boot-sharding-sphere/src/main/resources/application.properties
@@ -15,19 +15,18 @@ sharding.jdbc.datasource.ds1.jdbc-url=jdbc:mysql://localhost:3306/ds1?characterE
 sharding.jdbc.datasource.ds1.username=root
 sharding.jdbc.datasource.ds1.password=root
 
-# 水平拆分的数据库（表） 配置分库 + 分表策略 行表达式分片策略
-# 分库策略
+# 分库策略 根据主键id取模拆分为2个库，分别是ds0到ds1
 sharding.jdbc.config.sharding.default-database-strategy.inline.sharding-column=id
 sharding.jdbc.config.sharding.default-database-strategy.inline.algorithm-expression=ds$->{id % 2}
 
-# 分表策略 其中user为逻辑表 分表主要取决于age行
+# 分表策略 用户数据根据age列取模拆分为2张表，分别是user_0到user_1，他们的逻辑表名为user
 sharding.jdbc.config.sharding.tables.user.actual-data-nodes=ds$->{0..1}.user_$->{0..1}
 sharding.jdbc.config.sharding.tables.user.table-strategy.inline.sharding-column=age
 # 分片算法表达式
 sharding.jdbc.config.sharding.tables.user.table-strategy.inline.algorithm-expression=user_$->{age % 2}
 
 # 主键 UUID 18位数 如果是分布式还要进行一个设置 防止主键重复
-sharding.jdbc.config.sharding.tables.user.key-generator-column-name=id
+#sharding.jdbc.config.sharding.tables.user.key-generator-column-name=id
 
 # 打印执行的数据库以及语句
 sharding.jdbc.config.props..sql.show=true
