--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<module>spring-boot-demo</module>
         <module>spring-boot-sharding-sphere</module>
 		<module>spring-boot-common</module>
+		<module>spring-boot-copy</module>
+		<module>spring-boot-mail</module>
 	</modules>
 
 	<!-- 子模块默认继承下面这些依赖-->
@@ -40,11 +42,7 @@
 			<version>1.2.58</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.songsy.springboot</groupId>
-			<artifactId>spring-boot-common</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+
 	</dependencies>
 
 	<!-- 可供子模块使用的依赖，子模块需要要用那个就标明那个，在子模块中可以不需要配置version-->
@@ -69,6 +67,12 @@
 				<groupId>com.baomidou</groupId>
 				<artifactId>mybatis-plus-boot-starter</artifactId>
 				<version>3.1.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.songsy.springboot</groupId>
+				<artifactId>spring-boot-common</artifactId>
+				<version>1.0-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
