--- a/spring-boot-sharding-sphere/src/main/resources/application.properties
+++ b/spring-boot-sharding-sphere/src/main/resources/application.properties
@@ -20,13 +20,13 @@ sharding.jdbc.config.sharding.default-database-strategy.inline.sharding-column=i
 sharding.jdbc.config.sharding.default-database-strategy.inline.algorithm-expression=ds$->{id % 2}
 
 # 分表策略 用户数据根据age列取模拆分为2张表，分别是user_0到user_1，他们的逻辑表名为user
-sharding.jdbc.config.sharding.tables.user.actual-data-nodes=ds$->{0..1}.user_$->{0..1}
-sharding.jdbc.config.sharding.tables.user.table-strategy.inline.sharding-column=age
+sharding.jdbc.config.sharding.tables.userDO.actual-data-nodes=ds$->{0..1}.user_$->{0..1}
+sharding.jdbc.config.sharding.tables.userDO.table-strategy.inline.sharding-column=age
 # 分片算法表达式
-sharding.jdbc.config.sharding.tables.user.table-strategy.inline.algorithm-expression=user_$->{age % 2}
+sharding.jdbc.config.sharding.tables.userDO.table-strategy.inline.algorithm-expression=user_$->{age % 2}
 
 # 主键 UUID 18位数 如果是分布式还要进行一个设置 防止主键重复
-#sharding.jdbc.config.sharding.tables.user.key-generator-column-name=id
+#sharding.jdbc.config.sharding.tables.userDO.key-generator-column-name=id
 
 # 打印执行的数据库以及语句
 sharding.jdbc.config.props..sql.show=true
