--- a/spring-boot-rabbitmq/src/main/resources/application.properties
+++ b/spring-boot-rabbitmq/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.rabbitmq.port=5672
 # 用户账号
 spring.rabbitmq.username=songsy
 # 用户密码
-spring.rabbitmq.password=111111
+spring.rabbitmq.password=songsy
 spring.rabbitmq.virtual-host=/
 # 消息发送到交换机确认机制,是否确认回调
 spring.rabbitmq.publisher-confirms=true
