--- a/spring-boot-rabbitmq/pom.xml
+++ b/spring-boot-rabbitmq/pom.xml
@@ -34,10 +34,10 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>com.songsy.springboot</groupId>
-            <artifactId>spring-boot-mybatis</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.songsy.springboot</groupId>-->
+<!--            <artifactId>spring-boot-mybatis</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
