--- a/spring-boot-rabbitmq/src/main/resources/1.properties
+++ b/spring-boot-rabbitmq/src/main/resources/1.properties
@@ -1,25 +1,25 @@
 server.port=9003
 # rabbitmq
 spring.rabbitmq.host=111.230.226.158
-# 15672 ÊÇ¹ÜÀí¶Ë¶Ë¿Ú
+# 15672 ï¿½Ç¹ï¿½ï¿½ï¿½Ë¶Ë¿ï¿½
 spring.rabbitmq.port=5672
-# ÓÃ»§ÕËºÅ
+# ï¿½Ã»ï¿½ï¿½Ëºï¿½
 spring.rabbitmq.username=songsy
-# ÓÃ»§ÃÜÂë
+# ï¿½Ã»ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.password=songsy
 spring.rabbitmq.virtual-host=/
-# ÏûÏ¢·¢ËÍµ½½»»»»úÈ·ÈÏ»úÖÆ,ÊÇ·ñÈ·ÈÏ»Øµ÷
+# ï¿½ï¿½Ï¢ï¿½ï¿½ï¿½Íµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È·ï¿½Ï»ï¿½ï¿½ï¿½,ï¿½Ç·ï¿½È·ï¿½Ï»Øµï¿½
 spring.rabbitmq.publisher-confirms=true
-# Ïû·ÑÕßÊıÁ¿
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.listener.simple.concurrency= 10
 spring.rabbitmq.listener.simple.max-concurrency= 10
-# Ïû·ÑÕßÃ¿´Î´Ó¶ÓÁĞ»ñÈ¡µÄÏûÏ¢ÊıÁ¿
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã¿ï¿½Î´Ó¶ï¿½ï¿½Ğ»ï¿½È¡ï¿½ï¿½ï¿½ï¿½Ï¢ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.listener.simple.prefetch= 1
-# Ïû·ÑÕß×Ô¶¯Æô¶¯
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.listener.simple.auto-startup=true
-# Ïû·ÑÊ§°Ü£¬×Ô¶¯ÖØĞÂÈë¶Ó
+# ï¿½ï¿½ï¿½ï¿½Ê§ï¿½Ü£ï¿½ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.listener.simple.default-requeue-rejected= true
-# ÆôÓÃ·¢ËÍÖØÊÔ
+# ï¿½ï¿½ï¿½Ã·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.rabbitmq.template.retry.enabled=true
 spring.rabbitmq.template.retry.initial-interval=1000ms
 spring.rabbitmq.template.retry.max-attempts=3
