--- a/spring-boot-rabbitmq/src/main/resources/application.yml
+++ b/spring-boot-rabbitmq/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: songsy
     virtual-host: /
     publisher-confirms: true
-    publisher-returns: true
+#    publisher-returns: true
     listener:
       simple:
         acknowledge-mode: manual
