--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>spring-boot-mail</module>
 		<module>spring-boot-mybatis</module>
 		<module>spring-boot-rabbitmq</module>
+		<module>spring-boot-redis</module>
 		<module>spring-boot-sharding-sphere</module>
 	</modules>
 
