--- a/spring-boot-rabbitmq/src/main/resources/application.yml
+++ b/spring-boot-rabbitmq/src/main/resources/application.yml
@@ -7,8 +7,10 @@ spring:
     username: songsy
     password: songsy
     virtual-host: /
-    publisher-confirms: true
-#    publisher-returns: true
+    publisher-confirms: true #开启 confirm 确认机制
+    publisher-returns: true #开启 return 确认机制
+    template:
+      mandatory: true # 设置为 true 后 消费者在消息没有被路由到合适队列情况下会被return监听，而不会自动删除
     listener:
       simple:
         acknowledge-mode: manual
